--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width" >
+		We are Waive, we specialise in responsible AI-powered music tools and virtual artists.
+		To make sure that AI will always be an enrichment to human creative expression, instead of a threat.
+		</meta>
+		<title></title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="h-full">
